@@ -32,7 +32,7 @@ class ProfileVisitors extends IcmsPersistableObject {
 		$this->quickInitVar('visitors_id', XOBJ_DTYPE_INT, true);
 		$this->quickInitVar('uid_owner', XOBJ_DTYPE_INT, true);
 		$this->quickInitVar('uid_visitor', XOBJ_DTYPE_INT, true);
-		$this->quickInitVar('creation_time', XOBJ_DTYPE_LTIME, false);
+		$this->quickInitVar('visit_time', XOBJ_DTYPE_LTIME, false);
 
 	}
 
@@ -66,9 +66,11 @@ class ProfileVisitorsHandler extends IcmsPersistableObjectHandler {
 	 * @param int $start to which record to start
 	 * @param int $limit limit of tribes to return
 	 * @param int $uid_owner if specifid, only the tribes of this user will be returned
+	 * @param int $uid_visitor if specified, only the records with the specified user as a visitor will be returned
+	 * @param int $visit_time if specified, only records with a visit time greater than the specified on will be returned
 	 * @return CriteriaCompo $criteria
 	 */
-	function getVisitorsCriteria($start = 0, $limit = 0, $uid_owner = false) {
+	function getVisitorsCriteria($start = 0, $limit = 0, $uid_owner = false, $uid_visitor = false, $visit_time = false) {
 		global $icmsUser;
 
 		$criteria = new CriteriaCompo();
@@ -78,11 +80,17 @@ class ProfileVisitorsHandler extends IcmsPersistableObjectHandler {
 		if ($limit) {
 			$criteria->setLimit(intval($limit));
 		}
-		//$criteria->setSort('visit_time');
-		//$criteria->setOrder('DESC');
+		$criteria->setSort('visit_time');
+		$criteria->setOrder('DESC');
 
 		if ($uid_owner) {
 			$criteria->add(new Criteria('uid_owner', $uid_owner));
+		}
+		if ($uid_visitor) {
+			$criteria->add(new Criteria('uid_visitor', $uid_visitor));
+		}
+		if ($visit_time) {
+			$criteria->add(new Criteria('visit_time', $visit_time, '>='));
 		}
 		return $criteria;
 	}
@@ -92,13 +100,37 @@ class ProfileVisitorsHandler extends IcmsPersistableObjectHandler {
 	 *
 	 * @param int $start to which record to start
 	 * @param int $limit max tribes to display
-	 * @param int $uid_owner if specifid, only the tribe of this user will be returned
-	 * @return array of tribes
+	 * @param int $uid_owner if specifid, only the visitors of this user will be returned
+	 * @param int $uid_visitor if specified, only the records with the specified user as a visitor will be returned
+	 * @param int $visit_time if specified, only records with a visit time greater than the specified on will be returned
+	 * @return array of visitors
 	 */
-	function getVisitors($start = 0, $limit = 0, $uid_owner = false) {
-		$criteria = $this->getVisitorsCriteria($start, $limit, $uid_owner);
+	function getVisitors($start = 0, $limit = 0, $uid_owner = false, $uid_visitor = false, $visit_time = false) {
+		$criteria = $this->getVisitorsCriteria($start, $limit, $uid_owner, $uid_visitor);
 		$ret = $this->getObjects($criteria, true, false);
 		return $ret;
+	}
+
+	/**
+	 * Insert log entry for visit in case last visit wasn't today
+	 *
+	 * @global object $icmsUser current user object
+	 * @param int $uid_owner current user profile id
+	 */
+	function logVisitor($uid_owner) {
+		global $icmsUser;
+
+		$timestamp = mktime(0, 0, 1, date('n'), date('j'), date('Y'));
+		$visitors = $this->getVisitors(false, false, $uid_owner, $icmsUser->getVar('uid'), $timestamp);
+
+		if (count($visitors) == 0 && $icmsUser->getVar('uid') != $uid_owner) {
+			$newVisitor = new ProfileVisitors($this);
+			$newVisitor->setNew();
+			$newVisitor->setVar('uid_owner', $uid_owner);
+			$newVisitor->setVar('uid_visitor', $icmsUser->getVar('uid'));
+			$newVisitor->setVar('visit_time', time());
+			$this->insert($newVisitor, true);
+		}
 	}
 }
 ?>
