@@ -84,6 +84,7 @@ Revision:
 * #269: audio files can now be added properly | ticket from addons (Phoenyx)
 * #720: in case there is an error in doStoreFromDefaultForm, the correct message is shown to the user (Phoenyx)
 * #301: removed creation of /uploads/profile/mp3 in imProfile | ticket from addons (Phoenyx)
+* #300: a visit to a profile of another user is now loged | ticket from addons (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
